20111127 peripherals/ide/divide.[ch],unittests/unittests.c: refactor DivIDE
         paging code such that a unit test can be written for it, and then
         write said unit test.
20111128 peripherals/ide/zxatasp.[ch],unittests/unittests.c: add ZXATASP unit
         test.
20111216 peripherals/ide/zxcf.[ch],unittests/unittests.c: add ZXCF unit test.
<<<<<<< .mine
20111217 peripherals/if1.c: fix paging for 4K page size (thanks, unittests).
20111217 peripherals/disk/opus.c: make Opus paging less wrong.
20111217 memory.[ch],peripherals/disk/opus.c,unittests/unittests.[ch]: make
         Opus paging arguably even less wrong. It's still not right, though.
20111218 menu_data.dat,menu.h,ui/{options.dat,widget/{menu.c,widget.[ch]}}:
         peripherals menu had become insanely big; split it in two.
20111218 peripherals/ide/divide.c: fix paging for 4K page size (thanks,
         unittests).
20111218 peripherals/ide/zxatasp.c: fix paging for 4K page size (thanks,
         unittests). All unit tests now pass.
20111219 peripherals/ide/divide.c: access the correct object.
20111219 compat/unix/file.c,peripherals/ide/divide.c: fix warnings.
20111220 fuse.c,utils.[ch]: make selecting IDE files from the command-line
	 work properly.
20111220 hacking/{Makefile.am,peripheral_tests.txt},lib/{Makefile.am,
	 tests/idedos-success.hdf.bz2}: add some trivial peripheral smoke
	 tests.
20111220 hacking/peripheral_tests.txt,lib/{Makefile.am,
         tests/fatware-success.hdf.bz2}: add DivIDE smoke test.
20111220 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.mdr}: add
         Interface I smoke test.
20111221 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.udi}: add
	 Beta Disk smoke test.
20111221 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.opd}: add
	 Opus smoke test.
20111223 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.mgt.bz2}:
	 add +D smoke test (Stuart).